# f1-driver-grades

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  replit.nix  start.sh
backend/: requirements.txt
backend/app/: __init__.py  aggregate.py  cache.py  config.py  data_fetch.py  exceptions.py  features.py  main.py  model.py  pipeline.py  schemas.py  scoring.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DriverBarChart.tsx  DriverTable.tsx  FeatureImportanceChart.tsx  GradeBadge.tsx  H2HBar.tsx  Header.tsx  MisclassifiedCallout.tsx  Nav.tsx  PredictedVsActualChart.tsx  RefreshButton.tsx  StatusBanner.tsx
frontend/src/hooks/: useDriverGrades.ts
frontend/src/layout/: Layout.tsx  useLayoutData.ts
frontend/src/pages/: DriverGradesPage.tsx  GridImprovementPage.tsx  MethodologyPage.tsx  OverperformancePage.tsx  QualifyingH2HPage.tsx
frontend/src/theme/: theme.ts
